# carousel-agent

./: .env.example  .gitignore  DOCMAP_CONTEXT.md  HOOK_BRIEF.md  Marketing - Content - Tracker - Content Tracker (1).csv  Marketing - Content - Tracker - Content Tracker.csv  README.md  SCORING_AND_SELECTION.md  TODO.md  pyproject.toml  requirements.txt  sample.txt  threads.normalized.jsonl  threads.patient_only.dedup_clean.jsonl
data/: _test_structured.json  _test_structured2.json  endo_uk_docmap_run.json  endo_uk_docmap_run_scored_consistent.json  endo_uk_run.json  mock_run.json  performance.jsonl  performance.normalized.jsonl  persona_rules.json  run_full_20260418.json  run_latest_for_design.json  run_rerun.json
docs/: audience-and-personas-plan.md  golden-path.md  governance.md  prompt_baseline.md  prompts.md  simplification-execution-plan.md
docs/personas/: README.md  _template.json  long_road_diagnosis.json  navigating_care.json
documents/: README.md  anets-studio-n4lie_liz-aneta-apr-15-2026-003.txt
src/carousel_agents/: __main__.py  analysis_report.py  bundle_to_csv.py  chunking.py  compare_bundles.py  context_pack.py  defaults.py  experiment_analysis.py  experiment_orchestrator.py  experiment_program_store.py  export_clean.py  hook_policy.py  human_review.py  id_resolution.py  ig_ocr.py  import_tracker_performance.py  ingest.py  instagram_download.py  llm.py  (+19 more)
tests/: test_experiment.py  test_human_review.py  test_orchestrator.py  test_post_linkage.py  test_run_state_session.py  test_studio_persist.py  test_studio_sessions.py  test_validation_core.py
(+10 files in other folders)
