[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "carousel-agents"
version = "0.1.0"
description = "Selection-first, citation-based carousel generation pipeline"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.7",
  "typer>=0.12",
  "rich>=13.7",
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "instaloader>=4.11",
  "pillow>=10.4",
]

[project.optional-dependencies]
# Same codebase; research CLI is `python -m carousel_agents_research`. Extra is reserved for future optional deps.
research = []
dev = ["pytest>=8"]
ui = ["streamlit>=1.28"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

